# pumice

./: .env.example  .gitignore  .mcp.json  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.agents/: architect.md  backend.md  docs.md  frontend.md  qa.md  reviewer.md
.claude/: settings.local.json
.prompts/: docs-writer.md  implementer.md  master-planner.md  reviewer.md
.pumice/: heartbeat-agents.js  mcp-smoke.ts  project.json
app/: index.html
app/src/: App.tsx  styles.css  types.ts
app/src/lib/: tauri.ts
apps/api/: package.json  vitest.config.ts
apps/api/src/: fastify.d.ts  index.ts  server.ts
apps/mcp-server/: claude_mcp_config.json  package.json
apps/web/: index.html  package.json
docs/: IDEA.md  README.md  architecture.md  backlog.md  brainstorming.md  current-state.md  execution-checklist.md  implementation-roadmap.md  obsidian-context.md  product-vision.md  research.md  skill-activation-roadmap.md  task.md
docs/memory/: README.md  agent-research.md  research-landscape.md
obsidian-vault/: 00-project.md  01-architecture.md  02-decisions.md  03-backlog.md  README.md
src/: config.ts  doctor.ts  index.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.pumice/: project.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/agents/: claude.ts  codex.ts  gemini.ts  obsidian.ts  ollama.ts
src/hub/: client.ts  mcp-config.ts  server.ts  standalone.ts  transport.ts
src/orchestrator/: dispatcher.ts  planner.ts  reviewer.ts
src/utils/: exec.ts  fs.ts  mock.ts
(+43 files in other folders)
