[package]
name = "pumice"
version = "0.1.0"
description = "Pumice desktop shell"
authors = ["Pumice"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["process", "io-util", "rt-multi-thread", "macros"] }
